--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -80,7 +80,8 @@
         app:layout_constraintTop_toBottomOf="@+id/feedSubTitle"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginTop="32dp"
-        android:paddingStart="16dp"/>
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
