--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="color_gray">#d1d4d7</color>
     <color name="color_greys_01_dark_01_100">#4c4b5e</color>
     <color name="color_solid_secondary">#122b5b</color>
+    <color name="color_greys_04_extralight_01_100">#E4E5ED</color>
+    <color name="color_greys_03">#BABABC</color>
 </resources>
