--- a/app/src/main/res/layout/posts_rv_item.xml
+++ b/app/src/main/res/layout/posts_rv_item.xml
@@ -7,136 +7,66 @@
     android:layout_height="wrap_content"
     app:cardPreventCornerOverlap="true">
 
-    <RelativeLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true">
-
         <ImageView
             android:id="@+id/constraintContainer"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:scaleType="centerCrop"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/profile_image"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
-            android:layout_above="@+id/postTV"
-            android:layout_alignParentStart="true"
-            android:layout_marginEnd="16dp"
-            android:paddingStart="24dp"
-            android:paddingTop="24dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginEnd="8dp"
+            android:paddingTop="16dp"
             android:src="@drawable/ic_profile"
-            android:elevation="7dp"
-            />
+            app:layout_constraintBottom_toTopOf="@+id/postTV"
+            app:layout_constraintEnd_toStartOf="@+id/userName"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/userName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/postTV"
-            android:layout_toEndOf="@+id/profile_image"
+            android:layout_marginBottom="8dp"
+            android:gravity="top"
             android:maxLines="1"
-            android:paddingTop="24dp"
             android:textColor="@color/color_gray"
-            android:textSize="14sp"
-            tools:text="kate"
-            android:elevation="7dp"/>
+            android:textSize="18sp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintBottom_toTopOf="@+id/postTV"
+            app:layout_constraintStart_toEndOf="@+id/profile_image"
+            tools:text="kate" />
 
         <TextView
-            android:background="@color/color_gray"
             android:id="@+id/postTV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="18dp"
-            android:text="gfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghg"
+            android:layout_marginTop="24dp"
+            android:layout_marginBottom="16dp"
+            android:paddingStart="24dp"
+            android:paddingTop="16dp"
+            android:paddingEnd="24dp"
+            android:text="gfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghg"
             android:textColor="@color/colorPrimaryDark"
-            android:textSize="14sp" />
+            android:textSize="14sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
 
-    </RelativeLayout>
-
-    </RelativeLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
-
-
-<!--<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:id="@+id/postContainer"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    app:cardPreventCornerOverlap="true">-->
-
-<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content">-->
-
-<!--        <ImageView-->
-<!--            android:id="@+id/constraintContainer"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="match_parent"-->
-<!--            android:scaleType="fitXY"-->
-<!--            app:layout_constraintTop_toTopOf="parent"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"/>-->
-
-<!--        <de.hdodenhof.circleimageview.CircleImageView-->
-<!--            android:id="@+id/profile_image"-->
-<!--            android:layout_width="40dp"-->
-<!--            android:layout_height="40dp"-->
-<!--            android:layout_marginEnd="16dp"-->
-<!--            android:src="@drawable/ic_profile"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/userName"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/postTV"-->
-<!--            android:layout_marginStart="24dp"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/userName"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginStart="12dp"-->
-<!--            android:maxLines="1"-->
-<!--            android:textColor="@color/color_gray"-->
-<!--            android:textSize="18sp"-->
-<!--            app:layout_constraintBottom_toTopOf="@+id/postTV"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/profile_image"-->
-<!--            tools:text="kate"-->
-<!--            android:gravity="top"/>-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/postTV"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="24dp"-->
-<!--            android:layout_marginBottom="16dp"-->
-<!--            android:maxLines="4"-->
-<!--            android:text="gfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghg"-->
-<!--            android:textColor="@color/colorPrimaryDark"-->
-<!--            android:textSize="14sp"-->
-<!--            app:layout_constraintBottom_toBottomOf="parent"-->
-<!--            app:layout_constraintEnd_toEndOf="parent"-->
-<!--            app:layout_constraintStart_toStartOf="parent"-->
-<!--            app:layout_constraintTop_toBottomOf="@+id/profile_image"-->
-<!--            android:paddingStart="24dp"-->
-<!--            android:paddingEnd="24dp"-->
-<!--            android:paddingTop="16dp"/>-->
-
-
-
-
-<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
-
-<!--</androidx.cardview.widget.CardView>-->
 
 
 
