--- a/app/src/main/res/layout/add_story_rv_item.xml
+++ b/app/src/main/res/layout/add_story_rv_item.xml
@@ -25,4 +25,15 @@
 
     </androidx.cardview.widget.CardView>
 
+    <ImageView
+        android:id="@+id/addStoryBtn"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:src="@drawable/ic_plus"
+        android:elevation="2dp"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
