--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -3,13 +3,12 @@
     android:id="@+id/camera_activity_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextureView
         android:id="@+id/camera_preview"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +115,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         android:contentDescription="@null"/>
 
-    <ImageButton
+    <Button
         android:id="@+id/capture_btn"
         android:layout_width="60dp"
         android:layout_height="60dp"
