send media from CameraActivity to FeedsActivity updated

--- a/app/src/main/res/layout/item_captured.xml
+++ b/app/src/main/res/layout/item_captured.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:layout_gravity="center">
+    android:layout_gravity="center"
+    android:id="@+id/capturedImageContainer">
 
     <androidx.cardview.widget.CardView
         android:layout_width="72dp"
@@ -15,6 +16,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:cardElevation="0dp">
+
+        <ImageView
+            android:id="@+id/captured_img"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
 
     </androidx.cardview.widget.CardView>
 
