--- a/app/src/main/res/layout/activity_share_media.xml
+++ b/app/src/main/res/layout/activity_share_media.xml
@@ -89,8 +89,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
-        app:layout_constraintEnd_toEndOf="@id/activity_end_guideline"
-        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"/>
+        app:layout_constraintEnd_toStartOf="@id/openCameraBtn"
+        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
+    <ImageView
+        android:id="@+id/openCameraBtn"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_add_image"
+        app:layout_constraintEnd_toEndOf="@+id/activity_end_guideline"
+        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
