--- a/app/src/main/res/layout/activity_share_media.xml
+++ b/app/src/main/res/layout/activity_share_media.xml
@@ -37,32 +37,32 @@
         android:id="@+id/back_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline"
-        app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
         android:contentDescription="@null"
-        android:src="@drawable/ic_back"/>
+        android:src="@drawable/ic_back"
+        app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
+        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline" />
 
     <TextView
         android:id="@+id/title_tv"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="@string/send_photo"
-        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline"
-        app:layout_constraintStart_toEndOf="@id/back_iv"
-        android:textSize="18sp"
         android:layout_marginStart="16dp"
-        app:layout_constraintEnd_toStartOf="@id/send_iv"/>
+        android:text="@string/send_photo"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/send_iv"
+        app:layout_constraintStart_toEndOf="@id/back_iv"
+        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline" />
 
     <ImageView
         android:id="@+id/send_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline"
-        app:layout_constraintEnd_toStartOf="@id/activity_end_guideline"
         android:contentDescription="@null"
+        android:src="@drawable/ic_checkmark"
         android:tint="@color/color_greys_01_dark_01_100"
-        android:src="@drawable/ic_checkmark"/>
-    
+        app:layout_constraintEnd_toStartOf="@id/activity_end_guideline"
+        app:layout_constraintTop_toBottomOf="@id/activity_top_guideline" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/photo_card"
         android:layout_width="0dp"
@@ -70,38 +70,27 @@
         android:layout_marginTop="24dp"
         app:cardCornerRadius="24dp"
         app:cardElevation="0dp"
-        app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
+        app:layout_constraintBottom_toTopOf="@id/bottom_guideline"
         app:layout_constraintEnd_toStartOf="@id/activity_end_guideline"
-        app:layout_constraintTop_toBottomOf="@id/title_tv"
-        app:layout_constraintBottom_toTopOf="@id/bottom_guideline">
+        app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
+        app:layout_constraintTop_toBottomOf="@id/title_tv">
 
         <ImageView
             android:id="@+id/selected_photo_iv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:contentDescription="@null"
-            android:scaleType="centerCrop"/>
+            android:scaleType="centerCrop" />
 
     </androidx.cardview.widget.CardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/captured_images_rv"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@id/activity_start_guideline"
-        app:layout_constraintEnd_toStartOf="@id/openCameraBtn"
-        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
-    <ImageView
-        android:id="@+id/openCameraBtn"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:src="@drawable/ic_add_image"
-        app:layout_constraintEnd_toEndOf="@+id/activity_end_guideline"
-        app:layout_constraintTop_toBottomOf="@id/bottom_guideline"
-        app:layout_constraintBottom_toBottomOf="parent"/>
-
+        app:layout_constraintTop_toBottomOf="@id/bottom_guideline" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
