--- a/app/src/main/res/layout/item_add_photo.xml
+++ b/app/src/main/res/layout/item_add_photo.xml
@@ -10,6 +10,6 @@
         android:layout_height="48dp"
         android:contentDescription="@null"
         android:src="@drawable/ic_add_image"
-        android:layout_marginStart="16dp"/>
+        android:layout_margin="16dp"/>
 
 </FrameLayout>
