--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,10 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <!-- feed detail comment colors -->
+    <color name="color_greys_03_light_01_100">#eaebf1</color>
+    <color name="color_submit_btn_disable">#5766CBC9</color>
+    <color name="color_feed_info">#f2f2f9</color>
+
 </resources>
