--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -1,87 +1,107 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<androidx.coordinatorlayout.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Feed.FeedFragment"
-    android:background="@color/colorPrimaryDark"
-    android:paddingTop="16dp">
+   >
 
-    <TextView
-        android:id="@+id/storiesTitle"
-        android:layout_width="0dp"
-        android:layout_height="30dp"
-        android:text="@string/stories"
-        android:textColor="@color/color_gray"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/storiesRV"
-        android:layout_marginTop="18dp"
-        android:paddingStart="16dp"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:paddingTop="16dp">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/storiesRV"
-        android:layout_width="0dp"
-        android:layout_height="70dp"
-        android:paddingStart="@dimen/base_grid_size"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/storiesTitle"
-        app:layout_constraintBottom_toTopOf="@+id/feedTitle"
-        android:layout_marginBottom="@dimen/doub_grid_size"/>
+        <TextView
+            android:id="@+id/storiesTitle"
+            android:layout_width="0dp"
+            android:layout_height="30dp"
+            android:layout_marginTop="18dp"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:text="@string/stories"
+            android:textColor="@color/color_gray"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/storiesRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/feedTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="@string/feed_title"
-        android:textColor="@color/color_greys_01_dark_01_100"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        android:gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/storiesRV"
-        app:layout_constraintBottom_toTopOf="@+id/feedSubTitle"
-        android:layout_marginBottom="14dp"
-        android:paddingEnd="16dp"
-        android:paddingStart="16dp"/>
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/storiesRV"
+            android:layout_width="0dp"
+            android:layout_height="70dp"
+            android:layout_marginBottom="@dimen/doub_grid_size"
+            android:paddingStart="@dimen/base_grid_size"
+            android:text="@string/hello_blank_fragment"
+            app:layout_constraintBottom_toTopOf="@+id/feedTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storiesTitle" />
 
-    <TextView
-        android:id="@+id/feedSubTitle"
-        android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:text="@string/feed_subtitle"
-        android:textColor="@color/colorAccent"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:gravity="center_vertical"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feedTitle"
-        app:layout_constraintBottom_toTopOf="@+id/feedsRV"
-        android:paddingEnd="16dp"
-        android:paddingStart="16dp"/>
+        <TextView
+            android:id="@+id/feedTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/feed_title"
+            android:textColor="@color/color_greys_01_dark_01_100"
+            android:textSize="32sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/feedSubTitle"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/storiesRV" />
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/feedsRV"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:text="@string/hello_blank_fragment"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/feedSubTitle"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginTop="32dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"/>
+        <TextView
+            android:id="@+id/feedSubTitle"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:gravity="center_vertical"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/feed_subtitle"
+            android:textColor="@color/colorAccent"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@+id/feedsRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/feedTitle" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/feedsRV"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            android:paddingStart="16dp"
+            android:paddingEnd="16dp"
+            android:text="@string/hello_blank_fragment"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/feedSubTitle" />
+
+        <androidx.constraintlayout.widget.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="496dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    <include layout="@layout/feedbottomsheet" />
+
+
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
+
