--- a/app/src/main/res/layout/activity_stories.xml
+++ b/app/src/main/res/layout/activity_stories.xml
@@ -11,13 +11,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="@id/activity_start_guideline"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:elevation="1dp"
+        android:layout_marginTop="16dp"/>
 
     <ImageView
         android:id="@+id/story_iv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:contentDescription="@null" />
+        android:contentDescription="@null"
+        android:background="@android:color/black"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/activity_start_guideline"
@@ -72,9 +74,10 @@
         android:background="@drawable/rounded_white"
         android:backgroundTint="@color/colorPrimary"
         android:contentDescription="@null"
-        android:padding="6dp"
-        android:scaleType="fitCenter"
         android:src="@drawable/ic_checkmark"
+        android:scaleType="fitCenter"
+        android:paddingTop="6dp"
+        android:paddingStart="6dp"
         app:layout_constraintBottom_toBottomOf="@id/reply_bar"
         app:layout_constraintDimensionRatio="1"
         app:layout_constraintEnd_toEndOf="@id/reply_bar"
