--- a/app/src/main/res/layout/item_current_story.xml
+++ b/app/src/main/res/layout/item_current_story.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_margin="8dp"
     tools:background="@color/colorPrimary">
 
     <androidx.cardview.widget.CardView
