--- a/app/src/main/res/layout/posts_rv_item.xml
+++ b/app/src/main/res/layout/posts_rv_item.xml
@@ -56,7 +56,7 @@
             android:paddingStart="24dp"
             android:paddingTop="16dp"
             android:paddingEnd="24dp"
-            android:text="gfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghggfgggfjhghgjhgjhgjhgjghjgghgjhhhghghghg"
+            tools:text="jhgjhgjhgvbvnhghg"
             android:textColor="@color/colorPrimaryDark"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
