--- a/app/src/main/res/drawable/ic_camera.xml
+++ b/app/src/main/res/drawable/ic_camera.xml
@@ -1,4 +1,5 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:width="20dp"
     android:height="20dp"
     android:viewportWidth="20"
@@ -6,5 +7,22 @@
     <path
         android:fillColor="#D1D4D7"
         android:fillType="evenOdd"
-        android:pathData="M12.5,1.667c0.278,0 0.538,0.139 0.693,0.37l1.42,2.13L17.5,4.167c1.378,0 2.5,1.121 2.5,2.5v9.166c0,1.379 -1.122,2.5 -2.5,2.5h-15c-1.378,0 -2.5,-1.121 -2.5,-2.5L0,6.667c0,-1.379 1.122,-2.5 2.5,-2.5h2.888l1.419,-2.13c0.155,-0.231 0.415,-0.37 0.693,-0.37h5zM12.054,3.333L7.946,3.333l-1.42,2.13c-0.154,0.231 -0.414,0.37 -0.693,0.37L2.5,5.833c-0.46,0 -0.833,0.374 -0.833,0.834v9.166c0,0.46 0.374,0.834 0.833,0.834h15c0.46,0 0.833,-0.374 0.833,-0.834L18.333,6.667c0,-0.46 -0.373,-0.834 -0.833,-0.834h-3.333c-0.279,0 -0.539,-0.139 -0.694,-0.37l-1.419,-2.13zM10,6.667c2.297,0 4.167,1.869 4.167,4.166C14.167,13.131 12.297,15 10,15c-2.298,0 -4.167,-1.87 -4.167,-4.167 0,-2.297 1.87,-4.166 4.167,-4.166zM10,8.333c-1.378,0 -2.5,1.122 -2.5,2.5 0,1.379 1.122,2.5 2.5,2.5s2.5,-1.121 2.5,-2.5c0,-1.378 -1.122,-2.5 -2.5,-2.5z" />
+        android:pathData="M12.5,1.667c0.278,0 0.538,0.139 0.693
+        ,0.37l1.42,2.13L17.5,4.167c1.378,0 2.5,1.121 2.5,
+        2.5v9.166c0,1.379 -1.122,2.5 -2.5,2.5h-15c-1.378,
+        0 -2.5,-1.121 -2.5,-2.5L0,6.667c0,-1.379 1.122,
+        -2.5 2.5,-2.5h2.888l1.419,-2.13c0.155,-0.231 0.415,
+        -0.37 0.693,-0.37h5zM12.054,3.333L7.946,3.333l-1.42,
+        2.13c-0.154,0.231 -0.414,0.37 -0.693,0.37L2.5,
+        5.833c-0.46,0 -0.833,0.374 -0.833,0.834v9.166c0,
+        0.46 0.374,0.834 0.833,0.834h15c0.46,0 0.833,
+        -0.374 0.833,-0.834L18.333,6.667c0,-0.46 -0.373,
+        -0.834 -0.833,-0.834h-3.333c-0.279,0 -0.539,
+        -0.139 -0.694,-0.37l-1.419,-2.13zM10,6.667c2.297,
+        0 4.167,1.869 4.167,4.166C14.167,13.131 12.297,
+        15 10,15c-2.298,0 -4.167,-1.87 -4.167,-4.167 0,
+        -2.297 1.87,-4.166 4.167,-4.166zM10,8.333c-1.378,
+        0 -2.5,1.122 -2.5,2.5 0,1.379 1.122,2.5 2.5,2.5s2.5,
+        -1.121 2.5,-2.5c0,-1.378 -1.122,-2.5 -2.5,-2.5z"
+        tools:ignore="VectorPath" />
 </vector>
