adding scaling layout for the search bar :lipstick:

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -29,4 +29,11 @@
         <item name="textAllCaps">false</item>
     </style>
 
+    <!-- styles.xml -->
+    <style name="ToolbarTheme" parent="ThemeOverlay.AppCompat.Light">
+        <item name="android:fontFamily">@font/poppins_semibold</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textSize">36sp</item>
+    </style>
+
 </resources>
